# solarnetwork-python

./: README.md  pyproject.toml
solarnetwork_python/: authentication.py  client.py
tests/: test_authentication.py  test_client.py
