[tool.poetry]
name = "solarnetwork-python"
version = "0.1.0"
description = ""
authors = ["Thomas Passmore <thomas@ecosuite.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
